--- a/inception_v1.ipynb
+++ b/inception_v1.ipynb
@@ -46,8 +46,8 @@
    },
    "outputs": [],
    "source": [
-    "extract_zip('/content/test.csv.zip','/content')\n",
-    "extract_zip('/content/train.csv.zip','/content')"
+    "extract_zip('test.csv.zip','')\n",
+    "extract_zip('train.csv.zip','')"
    ]
   },
   {
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('/content/train.csv')\n",
+    "df = pd.read_csv('train.csv')\n",
     "df.shape"
    ]
   },
